# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  urls_repository.py
.github/workflows/: action.yml
page_analyzer/: __init__.py  app.py  urls_repository.py
page_analyzer/templates/: index.html  layout.html  show.html  urls.html
