[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyzer"
authors = ["Pavel Ilchenko <arisesinmight@gmail.com>"]
readme = "README.md"
packages = [
  { include = "page_analyzer" },
]


[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
flake8 = "^7.1.1"
pytest = "^8.3.4"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
